# PotatoPatch

./: .gitignore  CAPTURE_STATUS.md  CMakeLists.txt  README.md
shaders/: BilinearUpscale.hlsl  Common.hlsli  Copy.hlsl  FSRUpscale.hlsl  FrameInterpolation.hlsl  MotionEstimation.hlsl
src/: Application.cpp  Application.h  main.cpp
src/Capture/: CaptureEngine.cpp  CaptureEngine.h  DesktopDuplication.cpp  DesktopDuplication.h
src/Core/: D3D12Context.cpp  D3D12Context.h
src/Display/: DisplayManager.cpp  DisplayManager.h  OverlayRenderer.cpp  OverlayRenderer.h  OverlayWindow.cpp  OverlayWindow.h
src/Processing/: D3D11Upscaler.cpp  D3D11Upscaler.h  Upscaler.cpp  Upscaler.h
src/UI/: ImGuiLayer.cpp  ImGuiLayer.h
src/Utils/: Logger.cpp  Logger.h  Timer.cpp  Timer.h
